--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love from Nguyễn Trí</title>
+    <title>Document</title>
     <style>
         canvas {
             position: absolute;
@@ -48,7 +48,7 @@
             var koef = mobile ? 0.7 : 1;
             var canvas = document.getElementById('heart');
             var ctx = canvas.getContext('2d');
-            var width = canvas.width = koef * innerWidth;
+            var width = canvas.width = koef * innerWidth + (mobile ?  100 : 0);
             var height = canvas.height = koef * innerHeight;
             var rand = Math.random;
             ctx.fillStyle = "rgba(0,0,0,1)";
@@ -69,11 +69,11 @@
                 ctx.fillRect(0, 0, width, height);
             });
 
-            var traceCount = mobile ? 20 : 50;
+            var traceCount = mobile ? 120 : 50;
             var pointsOrigin = [];
             var i;
             var dr = mobile ? 0.3 : 0.1;
-            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 210, 13, 0, 0));
+            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 215, 13, 0, 0));
             for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 150, 9, 0, 0));
             for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 90, 5, 0, 0));
             var heartPointsCount = pointsOrigin.length;
@@ -95,14 +95,14 @@
                     vx: 0,
                     vy: 0,
                     R: 2,
-                    speed: rand() + 5,
+                    speed: rand() + 15,
                     q: ~~(rand() * heartPointsCount),
                     D: 2 * (i % 2) - 1,
                     force: 0.2 * rand() + 0.7,
                     f: "hsla(0," + ~~(40 * rand() + 60) + "%," + ~~(60 * rand() + 20) + "%,.3)",
                     trace: []
                 };
-                for (var k = 0; k < traceCount; k++) e[i].trace[k] = { x: x, y: y };
+                for (var k = 0; k < traceCount ; k++) e[i].trace[k] = { x: x, y: y };
             }
 
             var config = {
