--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         var init = function () {
             if (loaded) return;
             loaded = true;
-            var mobile = window.isDevice;
+            var mobile = false; window.isDevice;
             var koef = mobile ? 0.7 : 1;
             var canvas = document.getElementById('heart');
             var ctx = canvas.getContext('2d');
             var width = canvas.width = koef * innerWidth + (mobile ?  100 : 0);
-            var height = canvas.height = koef * innerHeight;
+            var height = canvas.height = koef * innerHeight + (mobile ?  100 : 0);
             var rand = Math.random;
             ctx.fillStyle = "rgba(0,0,0,1)";
             ctx.fillRect(0, 0, width, height);
